[tool.poetry]
name = "monitoring-bot"
version = "0.1.0"
description = "Simple tool for monitor subscribers on the channel and chat"
authors = ["Michael Rogozin <honsour72@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
pytest = "7.0.0"
ipython = "^8.20.0"
aiogram = "^3.3.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.25"
pytest-asyncio = "^0.23.3"
asyncpg = "^0.29.0"
pytest-async-sqlalchemy = "^0.2.0"
pytest-lazy-fixture = "^0.6.3"
ruff = "^0.2.1"
psycopg2 = "^2.9.9"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
